--- a/src/normalize.css
+++ b/src/normalize.css
@@ -38,7 +38,7 @@
    */
   
   h1 {
-    font-size: 2em;
+    
     margin: 0.67em 0;
   }
   
@@ -162,10 +162,8 @@
   optgroup,
   select,
   textarea {
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 1 */
-    line-height: 1.15; /* 1 */
-    margin: 0; /* 2 */
+  outline: none;
+    line-height: normal;
   }
   
   /**
