--- a/src/style.css
+++ b/src/style.css
@@ -47,17 +47,20 @@ a.active {
 }
 /* image loader */
 .productContainer {
-  width: 152px;
-  height: 138px;
+  position: relative;
   overflow: hidden;
+  border-radius: 6px;
+  /* height: 152px;
+  width: 138px; */
 }
 
 .imagePlaceholder {
   position: absolute;
   top: 0;
   left: 0;
-  width: 152px;
-  height: 138px;
+
+  width: 100%;
+  height: 100%;
   background: linear-gradient(90deg, #eee, #ddd, #eee);
   animation: shimmer 1.5s infinite;
   z-index: 1;
@@ -66,6 +69,7 @@ a.active {
 .productContainer img {
   width: 100%;
   height: 100%;
+
   object-fit: cover;
   opacity: 0;
   transition: opacity 0.3s ease;
